--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,9 @@ gatling {
 repositories {
   mavenCentral()
 }
+
+dependencies {
+    gatlingImplementation platform('software.amazon.awssdk:bom:2.21.1')
+    gatlingImplementation 'software.amazon.awssdk:cognitoidentityprovider'
+    gatlingImplementation 'software.amazon.awssdk:aws-core'
+}
