--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 build
 /src/gatling/java/no/sikt/nva/speedtest/ApiCalls.java
 /src/gatling/java/no/sikt/nva/speedtest/PublicationApiCalls.java
+/src/gatling/java/no/sikt/nva/speedtest/Nvi.java
+/src/gatling/java/no/sikt/nva/speedtest/UsersRoles.java
