Fix CloudFormation template

--- a/templates/warmup_template.yml
+++ b/templates/warmup_template.yml
@@ -42,7 +42,7 @@ Resources:
             Value: !GetAtt TestrunnerRole.Arn
       Source:
         Type: CODEPIPELINE
-        BuildSpec: template/buildspec.yml
+        BuildSpec: templates/buildspec.yml
   Pipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
