--- a/templates/warmup_template.yml
+++ b/templates/warmup_template.yml
@@ -21,7 +21,7 @@ Parameters:
   GitHubBranch:
     Description: GitHub repo branch name. It defaults to main if not specified.
     Type: String
-    Default: main
+    Default: master
 Resources:
   CodeBuildWarmupProject:
     Type: AWS::CodeBuild::Project
