--- a/templates/buildspec.yml
+++ b/templates/buildspec.yml
@@ -25,12 +25,12 @@ phases:
       - export CYPRESS_AWS_SESSION_TOKEN=$(cat Credentials | jq -r '.Credentials.SessionToken')
       - export CYPRESS_AWS_REGION='eu-west-1'
       - echo '------'
-      - echo $ENV
-      - echo $API_DOMAIN
-      - echo $USER_POOL_ID
-      - echo $CLIENT_ID
+      - echo ${ENV}
+      - echo ${API_DOMAIN}
+      - echo ${USER_POOL_ID}
+      - echo ${CLIENT_ID}
       - echo '------'
   build:
     commands:
       - gradle clean build
-      - gradle gatlingRun-no.sikt.nva.speedtest.SpeedTest -DawsEnv=$ENV -DapiDomain=$API_DOMAIN -DuserPoolId=$USER_POOL_ID -DclientId=$CLIENT_ID
+      - gradle gatlingRun-no.sikt.nva.speedtest.SpeedTest -DawsEnv=${ENV} -DapiDomain=${API_DOMAIN} -DuserPoolId=${USER_POOL_ID} -DclientId=${CLIENT_ID}
