--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ build
 /src/gatling/java/no/sikt/nva/speedtest/PublicationApiCalls.java
 /src/gatling/java/no/sikt/nva/speedtest/Nvi.java
 /src/gatling/java/no/sikt/nva/speedtest/UsersRoles.java
+/har/
